--- a/b_requests/templates/b_requests/return_request.html
+++ b/b_requests/templates/b_requests/return_request.html
@@ -10,44 +10,52 @@
       <p><strong class="text-atb-g-700">User:</strong> <span class="text-atb-g-600">{{ request.user.username }}</span></p>
       <p><strong class="text-atb-g-700">Device:</strong> <span class="text-atb-g-600">{{ device.name }}</span></p>
     </div>
-    <form method="post" class="space-y-6">
-        {% csrf_token %}
 
-        <div>
-            <label class="block my-4 font-semibold text-atb-g-700">
+    <form method="post"
+      hx-post="{% url 'requests:return-request' device.id %}"
+      hx-target="#form-response"
+      hx-swap="innerHTML"
+      class="space-y-6">
+    {% csrf_token %}
+
+    <div>
+        <label class="block my-4 font-semibold text-atb-g-700">
             Condition:<span class="text-atb-e-500">*</span>
-            </label>
-            {{ form.condition }}
-        </div>
-        
-        <div>
-            <label class="block mb-4 font-semibold text-atb-g-700">
+        </label>
+        {{ form.condition }}
+    </div>
+
+    <div>
+        <label class="block mb-4 font-semibold text-atb-g-700">
             Feedback:
-            </label>
-            {{ form.feedback }}
-        </div>            
-        <div class="flex flex-col md:justify-end sm:flex-row sm:justify-between sm:items-center mt-6 gap-4 sm:gap-4">
-            <a href="{% url 'devices:device-detail' device.id %}"
-               class="inline-flex items-center justify-center w-full sm:w-fit text-center whitespace-nowrap 
-               px-4 sm:px-6 py-2 text-[15px] sm:text-[18px] font-semibold 
-               rounded-[8px] transition-colors duration-200 
-               border border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
-               hover:bg-atb-g-50 hover:text-atb-g-800 
-               focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]"
-                hx-get="{% url 'devices:device-detail' device.id %}" 
-                hx-target="#main-content" 
-                hx-swap="innerHTML" 
-                hx-push-url="true"
-                >
-                Cancel
-            </a>
-            <button type="submit"
-                    class="inline-flex items-center justify-center bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-4 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer">
-                Submit Return
-            </button>
-        </div>
+        </label>
+        {{ form.feedback }}
+    </div>            
+    <div class="flex flex-col md:justify-end sm:flex-row sm:justify-between sm:items-center mt-6 gap-4 sm:gap-4">
+        <a href="{% url 'devices:device-detail' device.id %}"
+           class="inline-flex items-center justify-center w-full sm:w-fit text-center whitespace-nowrap 
+           px-4 sm:px-6 py-2 text-[15px] sm:text-[18px] font-semibold 
+           rounded-[8px] transition-colors duration-200 
+           border border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
+           hover:bg-atb-g-50 hover:text-atb-g-800 
+           focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]"
+           hx-get="{% url 'devices:device-detail' device.id %}" 
+           hx-target="#main-content" 
+           hx-swap="innerHTML" 
+           hx-push-url="true"
+           >
+            Return
+        </a>
+        <button type="submit"
+                class="inline-flex items-center justify-center bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-4 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer">
+            Submit Return
+        </button>
+    </div>
 
     </form>
+
+    <div id="form-response" class="mt-4"></div>
+
 
   </div>
 </div>
