--- a/theme/templates/nav-bar.html
+++ b/theme/templates/nav-bar.html
@@ -8,7 +8,7 @@
 
       <!-- Growing button (right side, large click area) -->
       <button onclick="humberg()" 
-              class="flex-grow flex justify-end items-center pr-4 py-2 text-atb-g-600 focus:outline-none border rounded-md">
+              class="flex-grow flex justify-end items-center pr-4 py-2 text-atb-g-600 focus:outline-none rounded-md">
         <img src="{% static 'assets/icons/menu.svg' %}" alt="Menu Icon" class="w-6 h-6">
       </button>
     </div>
