--- a/staticfiles/admin/css/dark_mode.css
+++ b/staticfiles/admin/css/dark_mode.css
@@ -13,7 +13,6 @@
       --breadcrumbs-bg: var(--primary);
   
       --link-fg: #81d4fa;
-      --link-hover-color: #4ac1f7;
       --link-selected-fg: #6f94c6;
   
       --hairline-color: #272727;
@@ -24,7 +23,7 @@
       --message-warning-bg: #583305;
       --message-error-bg: #570808;
   
-      --darkened-bg: #212121;
+      --darkened-bg: #fff;
       --selected-bg: #1b1b1b;
       --selected-row: #00363a;
   
@@ -48,10 +47,6 @@ html[data-theme="dark"] {
 
     --breadcrumbs-link-fg: #e0e0e0;
     --breadcrumbs-bg: var(--primary);
-
-    --link-fg: #81d4fa;
-    --link-hover-color: #4ac1f7;
-    --link-selected-fg: #6f94c6;
 
     --hairline-color: #272727;
     --border-color: #353535;
