--- a/staticfiles/admin/css/nav_sidebar.css
+++ b/staticfiles/admin/css/nav_sidebar.css
@@ -17,7 +17,7 @@
     background-color: var(--body-bg);
     cursor: pointer;
     font-size: 1.25rem;
-    color: var(--link-fg);
+    color: #344054;
     padding: 0;
 }
 
