--- a/devices/templates/devices/device_list.html
+++ b/devices/templates/devices/device_list.html
@@ -27,10 +27,10 @@
         </div>
 
         
-        <div class="w-full md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12">
+        <div  id="device-list" class="w-full md:w-2/3 border border-white bg-white rounded-[12px] p-4 sm:p-6 md:p-12">
 
             {% if object_list %}
-                <div id="device-list" class="space-y-4">
+                <div class="space-y-4">
                     {% for instance in object_list %}
                         <a href="{% url 'devices:device-detail' instance.id %}" 
                            class="device-card block bg-atb-g-50 rounded-[12px] p-8 hover:bg-atb-g-200 focus:border-none focus:ring-0 focus:shadow-[0_0_0_4px_#F2F4F7] transition duration-300"
@@ -101,7 +101,7 @@ const DeviceManager = (function() {
 
 
     function sortCards(field, direction = 'asc') {
-        const container = document.getElementById('device-list');
+        const container = document.querySelector('#device-list .space-y-4');
         if (!container) return;
 
         const cards = Array.from(container.querySelectorAll('.device-card'));
