--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <script src="{% static 'js/flatpickr.min.js' %}"></script>
 		{% tailwind_css %}
         <script src="{% static 'js/chart.js' %}"></script>
+        <link rel="icon" type="image/png" href="{% static 'assets/icons/atbico.png' %}">
     </head>
     <body class="bg-atb-g-50 min-h-screen w-full" >
             {% if not is_htmx %}
@@ -168,6 +169,8 @@
 
     window.showTab = function(selectedTab) {
     var tabs = ['user', 'borrow', 'device', 'return'];
+
+    currentTab = selectedTab;
 
     for (var i = 0; i < tabs.length; i++) {
         var tab = tabs[i];
