--- a/templates/sort-filter/sorts/device_options.html
+++ b/templates/sort-filter/sorts/device_options.html
@@ -1,5 +1,5 @@
 <select onchange="toggleSorting(this.value)" 
-        class="w-1/2 grow py-2 pr-8 pl-4 rounded-[8px] bg-white text-[16px] text-atb-g-900 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]">
+    class="w-full sm:w-1/2 min-w-0 py-2 pr-8 pl-4 rounded-[8px] bg-white text-[16px] text-atb-g-900 border border-atb-g-300 placeholder-atb-g-500 hover:text-atb-g-900 focus:text-atb-g-900 focus:ring-atb-p-200 focus:border-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6]">
     <option value="name-asc" selected>Alphabet ↑</option>
     <option value="name-desc">Alphabet ↓</option>
     <option value="id-asc">Date of Creation ↑</option>
