--- a/staticfiles/admin/css/responsive.css
+++ b/staticfiles/admin/css/responsive.css
@@ -38,7 +38,7 @@ input[type="submit"], button {
     /* Header */
 
     #header {
-        flex-direction: column;
+        flex-direction: row;
         padding: 15px 30px;
         justify-content: flex-start;
     }
