--- a/staticfiles/admin/css/base.css
+++ b/staticfiles/admin/css/base.css
@@ -5,8 +5,8 @@
 /* VARIABLE DEFINITIONS */
 html[data-theme="light"],
 :root {
-    --primary: #ac0033;
-    --secondary: #ac0033;
+    --primary: #79aec8;
+    --secondary: #417690;
     --accent: #f5dd5d;
     --primary-fg: #fff;
 
@@ -44,8 +44,8 @@ html[data-theme="light"],
 
     --button-fg: #fff;
     --button-bg: var(--secondary);
-    --button-hover-bg: #8F002B;
-    --default-button-bg: #8F002B;
+    --button-hover-bg: #205067;
+    --default-button-bg: #205067;
     --default-button-hover-bg: var(--secondary);
     --close-button-bg: #747474;
     --close-button-hover-bg: #333;
@@ -98,14 +98,14 @@ body {
     padding: 0;
     font-size: 0.875rem;
     font-family: var(--font-family-primary);
-    color: #667085;
-    background: #F9FAFB;
+    color: var(--body-fg);
+    background: var(--body-bg);
 }
 
 /* LINKS */
 
 a:link, a:visited {
-    color: #344054;
+    color: var(--link-fg);
     text-decoration: none;
     transition: color 0.15s, background 0.15s;
 }
@@ -496,7 +496,7 @@ Add input:not([type]) to make the CSS stylesheet work the same.
 input:not([type]), input[type=text], input[type=password], input[type=email],
 input[type=url], input[type=number], input[type=tel], textarea, select,
 .vTextField {
-    border: 1px solid #D0D5DD;
+    border: 1px solid var(--border-color);
     border-radius: 4px;
     padding: 5px 6px;
     margin-top: 0;
@@ -551,17 +551,15 @@ a.button {
 }
 
 .button.default, input[type=submit].default, .submit-row input.default {
-    border: solid 1px #D0D5DD;
-    color: #344054;
+    border: none;
     font-weight: 400;
-    background: #fff;
+    background: var(--default-button-bg);
 }
 
 .button.default:active, input[type=submit].default:active,
 .button.default:focus, input[type=submit].default:focus,
 .button.default:hover, input[type=submit].default:hover {
-    background: #F9FAFB;
-    color: #1D2939;
+    background: var(--default-button-hover-bg);
 }
 
 .button[disabled].default,
