--- a/staticfiles/admin/css/nav_sidebar.css
+++ b/staticfiles/admin/css/nav_sidebar.css
@@ -17,7 +17,7 @@
     background-color: var(--body-bg);
     cursor: pointer;
     font-size: 1.25rem;
-    color: #344054;
+    color: var(--link-fg);
     padding: 0;
 }
 
@@ -36,11 +36,9 @@
     flex: 0 0 275px;
     left: -276px;
     margin-left: -276px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: white;
-    border-radius: 12px
+    border-top: 1px solid transparent;
+    border-right: 1px solid var(--hairline-color);
+    background-color: var(--body-bg);
     overflow: auto;
 }
 
