--- a/staticfiles/admin/css/widgets.css
+++ b/staticfiles/admin/css/widgets.css
@@ -309,6 +309,7 @@ p.datetime {
     line-height: 20px;
     margin: 0;
     padding: 0;
+    color: var(--body-quiet-color);
     font-weight: bold;
 }
 
