--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 (function() {
     // WS
     if (!window.notificationSocket) {
-        const protocol = window.location.protocol === "https:" ? "wss" : "ws";
+        const protocol = window.location.protocol === "https:" ? "wss:" : "ws:";
         const wsUrl = `${protocol}://${window.location.host}/ws/notifications/`;
         
         const socket = new WebSocket(wsUrl);
