--- a/templates/base.html
+++ b/templates/base.html
@@ -85,9 +85,10 @@
 (function() {
     // WS
     if (!window.notificationSocket) {
-        const protocol = window.location.protocol === "https:" ? "wss:" : "ws:";
+        const protocol = window.location.protocol === "https:" ? "wss" : "ws";
         const wsUrl = `${protocol}://${window.location.host}/ws/notifications/`;
         
+        console.log("Connecting to WebSocket at:", wsUrl);
         const socket = new WebSocket(wsUrl);
         window.notificationSocket = socket;
 
